tests/NormalTests/paczka1/small_fuzzy/82059401.err
Error in line 8: gAcyeIWWG
Error in line 9:  A407 45,4
Error in line 7: xcxXQkLyxYv A135 95,6
